    - Rerendered molten glass's to be visually distinct.
    - Forced by wube to change chain signals to use orange circuits instead of red.
    - Changed train stations to use green circuits instead of red, but increased their amount by one.
    - Made quality incompatable with PM, for now.
    - Moved fertiliser to alkali metal packs.
    - Halved amount of coke needed for titanium oxide.

  Fixes:
    - Fixed the science pack item names captilisation.
    - (Mostly) Fixed the Factoriopedia being a mess. Never not name your recipes after their outputs.
    - Fixed empty reactor cells taking 0.5s to craft, and not 20s. Sucks to suck, huh?
    - Finally got rid of the plastic bar item that appears in the factoriopedia and item menus.
    - Re-ordered science to actually be in the correct order (normal > plastic > francium)
    - Fixed the ordering of certain subgroups, for real this time.
    - Fixed random things like explosives not being in the presumably correct category.
    - Made slugs actually work with 2.0, im not sure how well they now work so any balance or suggestions are greatly appreciated.
    - Changed byproduct handling to be unlockable from ezekiel processing, and not transition metal leeching.
    - Added the heavy lubricant recipe of solar cells to lubricant technology.
    - Fixed ezekiel ore leeching to actually give the correct amount of ore. This hurts you more then it hurts me, i assure you.
    - Fixed the category tabs not using up the amount of space they have.
    - Fixed molten metal capatalisation.
    - Revamped all ammo recipes, to be cheaper and just better.
    - Made the health bio-upgrade's description be more relevant.
    - Reworked values for battery capacity bonuses, increasing the amount you get.
    - Fixed health bio-modules not doubling in amount at the right technology.
    - Fixed the times for solar panel 2 not matching with solar panel 1.